package Outils

class AnalysePhrase{
    /**
      * 
      *
      * @return
      */
    def SepMot(phrase:String):List[String] = ???

}