package Outils

class Correction {
    /**
      * pre
      * @param mots
      * @param motsCorrect
      * @return
      */
    def Correct(mots: List[String], motsCorrect: List[String]): List[String] = ???
}
