package Outils

object  CreationDeRep{
    def Reponse(message: String):String = "????"
}