package application

import scala.swing.SimpleSwingApplication
import scala.swing.MainFrame

object  Avatar extends SimpleSwingApplication {
    def top : MainFrame = new UI
}