
@startuml Avatar
interface Avatar{
    ask(s: String): List[String]
    reinit(): Unit
}

interface CreationListMotClef{
    ListCorrection(Mots : List[String]): List[String]
    MatchMotClef(Mots : List[String], BDD1, BDD2): List[String]
}

interface AnalysePhrase{
    SepMots(s:String): List[String]
    CreationMotClef(Mots : List[String]): List[String]
}
interface CreationDeRep{
    Reponse(Message: String): String
}
interface Correction{
    Correct(Mots : List[String], BDD1): List[String]
}

interface Interface{
    
}

Interface <-> Avatar
Avatar --> AnalysePhrase
AnalysePhrase --> CreationDeRep
CreationDeRep --> Avatar
Correction --|> CreationListMotClef




class BDListLieux <<(B,Orange)>>
class BDDPolitesse <<(B,Orange)>>
CreationListMotClef --> AnalysePhrase
BDD1 --|> CreationListMotClef
BDD2 --|> CreationDeRep

EntréUtilisateur --|> Interface

@enduml